Added description and image

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I'm Akari Tsutsui, Front-end developer based in Vancouver."
     />
+    <meta name="title" property="og:title" content="Akari Tsutsui | Front-end Developer" />
+    <meta property="og:type" content="website" />
+    <meta name="image" property="og:image" content="https://www.flickr.com/photos/192919412@N07/shares/3vRusZ" />
+    <meta name="description" property="og:description" content="I'm Akari Tsutsui, Front-end developer based in Vancouver." />
+    <meta name="author" content="Akari Tsutsui" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Akari Tsutsui | Front-end Developer</title>
