Added description and image

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="I'm Akari Tsutsui, Front-end developer based in Vancouver."
+      content="Hi I'm Akari, front-end developer based in Vancouver. Passionate about designing and building user-friendly websites."
     />
     <meta name="title" property="og:title" content="Akari Tsutsui | Front-end Developer" />
     <meta property="og:type" content="website" />
-    <meta name="image" property="og:image" content="https://www.flickr.com/photos/192919412@N07/shares/3vRusZ" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51157201948_a4bc9e5bd3_k.jpg" />
     <meta name="description" property="og:description" content="I'm Akari Tsutsui, Front-end developer based in Vancouver." />
     <meta name="author" content="Akari Tsutsui" />
 
