--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     />
     <meta name="title" property="og:title" content="Akari Tsutsui | Front-end Developer" />
     <meta property="og:type" content="website" />
-    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51157201948_a4bc9e5bd3_k.jpg" />
-    <meta name="description" property="og:description" content="I'm Akari Tsutsui, Front-end developer based in Vancouver." />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51158126185_c25a91722c_k.jpg" />
+    <meta name="description" property="og:description" content="Hi I'm Akari, front-end developer based in Vancouver. Passionate about designing and building user-friendly websites." />
     <meta name="author" content="Akari Tsutsui" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
